# eThShop

./: .gitignore  CMakeLists.txt  README.md
Documents/: Data Dictionary.xlsx  Digrams.mdj
android/: AndroidManifest.xml  local.properties
include/: configmanager.h  fauthmanager.h  fcategorymanager.h  fimageuploader.h  fproductmanager.h  ftimemanager.h  fusermanager.h  ocategory.h  oproduct.h  ouser.h  persistableitem.h  sconnection.h
interfaces/: AddImages.qml  AddProductPage.qml  AddProductS2Page.qml  EditePage.qml  FavoritePage.qml  HomePage.qml  LoginPage.qml  MyProductPage.qml  ProductPage.qml  ProfileImagePage.qml  RegisterPage.qml  SearchPage.qml  SettingsPage.qml  TypePage.qml  UserPage.qml  main.q.Test  main.qml
interfaces/components/: InfoText.qml  MyButton.qml  MyCard.qml  MyCustomDialog.qml  MyDialog.qml  MyHeader.qml  MyIconButton.qml  MyIconText.qml  MyIconTextButton.qml  MyImageHolder.qml  MyImageUploadItem.qml  MyNavBar.qml  MyProfileWrapper.qml  MySideMenu.qml  MySlideIcon.qml  MyStepBar.qml  MyTabBar.qml  MyTextButton.qml  MyUserInfo.qml
src/: configmanager.cpp  fauthmanager.cpp  fcategorymanager.cpp  fimageuploader.cpp  fproductmanager.cpp  ftimemanager.cpp  fusermanager.cpp  main.cpp  ocategory.cpp  oproduct.cpp  ouser.cpp  persistableitem.cpp  sconnection.cpp
